--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,20 +3,21 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
-    "com.unity.collab-proxy": "2.1.0",
-    "com.unity.ide.rider": "3.0.25",
-    "com.unity.ide.visualstudio": "2.0.21",
+    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.localization": "1.4.5",
-    "com.unity.probuilder": "5.1.1",
-    "com.unity.render-pipelines.universal": "14.0.9",
-    "com.unity.splines": "2.4.0",
+    "com.unity.memoryprofiler": "1.1.0",
+    "com.unity.probuilder": "5.2.2",
+    "com.unity.render-pipelines.universal": "14.0.10",
+    "com.unity.splines": "2.5.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.5",
+    "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualscripting": "1.9.2",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
